# U1bot

./: .env  .env.example  .gitignore  README.md  bot.py  check_db.py  fix_alembic.py  pyproject.toml
U1/: database.py  message.py  model.py
U1/database/: __init__.py  config.py
U1/utils/: permission.py  token_bucket.py  utils.py
migrations/versions/: 4d78f4f6c5fa_migrate_coin_data_from_fishing_to_coin_.py  782cb0785d08_patch_waifu.py  adc8daa3ce44_migrate_cq_codes_to_img_base64.py  b3a3a7de2c5e_initial_migration.py
script/: coin_analysis.py  coin_visualizer.py  run_coin_analysis.sh
src/plugins/Menu/: __init__.py  plugin.json
src/plugins/Menu/markdown/: 回声洞.md  成分姬.md  早晚安.md
src/plugins/addfirend/: __init__.py
src/plugins/aichat/: __init__.py  config.py  utils.py
src/plugins/cave/: __init__.py  models.py  tool.py
src/plugins/coin/: __init__.py  api.py  models.py
src/plugins/ddcheck/: __init__.py  data_source.py
src/plugins/fishing/: __init__.py  config.py  data_source.py  models.py
src/plugins/ncm_saying/: __init__.py
src/plugins/nonebot_plugin_heweather/: __init__.py  config.py  model.py  render_pic.py  weather_data.py
src/plugins/nonebot_plugin_multincm/: config.py
src/plugins/nonebot_plugin_multincm/interaction/: resolver.py
src/plugins/nonebot_plugin_multincm/interaction/message/: common.py  song_file.py
src/plugins/nonebot_plugin_multincm/utils/: base.py  lrc_parser.py
src/plugins/nonebot_plugin_picstatus/: __init__.py  __main__.py  bg_provider.py  config.py  debug.py  misc_statistics.py  util.py
src/plugins/nonebot_plugin_picstatus/collectors/: __init__.py  bot.py  cpu.py  disk.py  network.py  process.py
src/plugins/nonebot_plugin_picstatus/templates/: __init__.py  pw_render.py
src/plugins/nonebot_plugin_picstatus/templates/default/: __init__.py
src/plugins/removegroup/: __init__.py
src/plugins/sleep/: __init__.py  config.py  data_source.py  models.py  scheduler.py  utils.py
src/plugins/smart_bot_switch/: __init__.py
src/plugins/tarot/: __init__.py  config.py  data_source.py
src/plugins/today_in_history/: __init__.py
src/plugins/today_yunshi/: __init__.py  api.py  data_source.py  models.py
src/plugins/waifu/: __init__.py  card_pool.py  config.py  cp_list.py  divorce.py  main.py  models.py  record.py  scheduler.py  utils.py  yinpa.py
