[tool.poetry]
name = "u1bot"
version = "0.1.0"
description = ""
authors = ["wling-art <wlingzhenyu@163.com>"]
readme = "README.md"
[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = [
    "nonebot_plugin_apscheduler",
    "nonebot_plugin_htmlrender",
    "nonebot_plugin_alconna",
    "nonebot_plugin_localstore",
    "nonebot_plugin_tortoise_orm",
]
plugin_dirs = ["src/plugins"]
builtin_plugins = []


[[tool.pdm.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
verify_ssl = true
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"


[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "E501",   # line-too-long
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.pyright]
typeCheckingMode = "basic"

[project]
authors = [{ name = "wling-art", email = "wlingzhenyu@163.com" }]
requires-python = "<4.0,>=3.10"
dependencies = [
    "nonebot2[fastapi,httpx,websockets]<3.0.0,>=2.4.1",
    "nonebot-plugin-tortoise-orm<1.0.0,>=0.1.4",
    "nonebot-plugin-apscheduler<1.0.0,>=0.5.0",
    "nonebot-plugin-htmlrender<1.0.0,>=0.4.0",
    "nonebot-adapter-onebot<3.0.0,>=2.4.6",
    "nonebot-plugin-userinfo<1.0.0,>=0.2.6",
    "aiohttp<4.0.0,>=3.10.0",
    "ujson<6.0.0,>=5.10.0",
    "nonebot-plugin-alconna<1.0.0,>=0.55.0",
    "aiocache<1.0.0,>=0.12.3",
    "faker<31.0.0,>=30.8.2",
    "cookit<1.0.0,>=0.8.1",
    "bilireq<1.0.0,>=0.2.13",
    "pyncm<2.0.0,>=1.6.17",
    "nonebot-plugin-localstore<1.0.0,>=0.7.1",
    "async-lru<3.0.0,>=2.0.4",
    "psutil<7.0.0,>=6.1.0",
    "py-cpuinfo<10.0.0,>=9.0.0",
    "setuptools<76.0.0,>=75.8.0",
    "pil-utils>=0.1.12",
    "httpx==0.27.2",
]
name = "u1bot"
version = "0.1.0"
description = ""
readme = "README.md"
